// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server GET /swaps/:id retrieves a swap in FAILED status (egress ignored) 1`] = `
{
  "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
  "depositAmount": "5000000000000000000",
  "depositChannelBrokerCommissionBps": 0,
  "depositChannelCreatedAt": 516000,
  "depositChannelExpiryBlock": "265",
  "depositChannelMaxBoostFeeBps": 0,
  "depositChannelOpenedThroughBackend": false,
  "depositReceivedAt": 552000,
  "depositReceivedBlockIndex": "92-400",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "egressIgnoredAt": 564000,
  "egressIgnoredBlockIndex": "94-595",
  "error": {
    "message": "The amount is below the minimum egress amount.",
    "name": "ethereumIngressEgress.BelowEgressDustLimit",
  },
  "estimatedDefaultDurationSeconds": 48,
  "estimatedDepositChannelExpiryTime": 1699527060000,
  "failure": "SWAP_OUTPUT_TOO_SMALL",
  "feesPaid": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "4999949999999650",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "LIQUIDITY",
    },
    {
      "amount": "4506169",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "LIQUIDITY",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
  ],
  "ignoredEgressAmount": "0",
  "intermediateAmount": "4506169140",
  "isDepositChannelExpired": false,
  "lastStatechainUpdateAt": "2024-10-02T10:34:08.907Z",
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "FAILED",
  "swapExecutedAt": 564000,
  "swapExecutedBlockIndex": "94-594",
  "swapId": "368",
  "swapScheduledAt": 552000,
  "swapScheduledBlockIndex": "92-399",
  "type": "SWAP",
}
`;

exports[`server GET /swaps/:id retrieves a swap in FAILED status (refund egress ignored) 1`] = `
{
  "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
  "depositAmount": "5000000000000000000",
  "depositChannelBrokerCommissionBps": 0,
  "depositChannelCreatedAt": 516000,
  "depositChannelExpiryBlock": "265",
  "depositChannelMaxBoostFeeBps": 0,
  "depositChannelOpenedThroughBackend": false,
  "depositReceivedAt": 552000,
  "depositReceivedBlockIndex": "92-400",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "egressAmount": "999844999999160000",
  "egressIgnoredAt": 624000,
  "egressIgnoredBlockIndex": "104-1",
  "egressScheduledAt": 564000,
  "egressScheduledBlockIndex": "94-594",
  "egressType": "REFUND",
  "error": {
    "message": "The amount is below the minimum egress amount.",
    "name": "ethereumIngressEgress.BelowEgressDustLimit",
  },
  "estimatedDefaultDurationSeconds": 48,
  "estimatedDepositChannelExpiryTime": 1699527060000,
  "failure": "REFUND_OUTPUT_TOO_SMALL",
  "feesPaid": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "105000000490000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "EGRESS",
    },
  ],
  "ignoredEgressAmount": "999844999999160000",
  "isDepositChannelExpired": false,
  "lastStatechainUpdateAt": "2024-10-02T10:34:09.052Z",
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "FAILED",
  "swapId": "368",
  "swapScheduledAt": 552000,
  "swapScheduledBlockIndex": "92-399",
  "type": "SWAP",
}
`;

exports[`server GET /swaps/:id retrieves boost details when swap was boosted 1`] = `
{
  "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
  "depositAmount": "4999949999999650000",
  "depositBoostedAt": 552000,
  "depositBoostedBlockIndex": "92-400",
  "depositChannelBrokerCommissionBps": 0,
  "depositChannelCreatedAt": 516000,
  "depositChannelExpiryBlock": "265",
  "depositChannelMaxBoostFeeBps": 30,
  "depositChannelOpenedThroughBackend": false,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "effectiveBoostFeeBps": 5,
  "estimatedDefaultDurationSeconds": 48,
  "estimatedDepositChannelExpiryTime": 1699527060000,
  "feesPaid": [
    {
      "amount": "2500000000000000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "BOOST",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "isDepositChannelExpired": false,
  "lastStatechainUpdateAt": "2024-10-02T10:34:09.462Z",
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "DEPOSIT_RECEIVED",
  "swapId": "368",
  "swapScheduledAt": 552000,
  "swapScheduledBlockIndex": "92-399",
  "type": "SWAP",
}
`;
